--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-cayman
+
+title: LearnAI - Recommendation Systems using Azure ML with Azure Databricks
+
+show_downloads: true
+
+repository: Azure/RecommendationSystemsusingAML
