--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 
-title: LearnAI - Recommendation Systems using Azure ML with Azure Databricks
+title: LearnAI - Recommendation Systems using Azure ML services
 
 show_downloads: true
 
